src/objects/Applicant__c.object
<CustomObject>
    <fields>
        <fullName>Admissible_Board_Examination_Date__c</fullName>
        <label>Admissible Board Examination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advocacy_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advocacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_Substance_Abuse_Issues__c</fullName>
        <label>Any Substance Abuse Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Accepts_th_Attestation_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicant Accepts the Attestation Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bare_Dates__c</fullName>
        <label>Bare Dates</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board_Certification_Revoked__c</fullName>
        <label>Board Certification Revoked</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Board_Exam_Failed__c</fullName>
        <inlineHelpText>Have you been examined by any speciality board but failed to pass the examination?</inlineHelpText>
        <label>Board Exam Failed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Board_Failed__c</fullName>
        <label>If Yes, Name of Board Failed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board_Prepared_Info__c</fullName>
        <inlineHelpText>If you are not Board Certified, are you admissible to a speciality board examination?</inlineHelpText>
        <label>Board Prepared Info</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chosen_not_to_recertify__c</fullName>
        <label>Chosen not to recertify</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conditions_that_may_affect_work__c</fullName>
        <label>Conditions that may affect work</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Criminal_History__c</fullName>
        <inlineHelpText>Have you ever been convicted of a crime (other than minor traffic offenses), or are any such charges pending?</inlineHelpText>
        <label>Criminal History</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DEA_CSR_CDS_DPS_Actions__c</fullName>
        <inlineHelpText>Has your DEA license or state narcotics registration license ever been diminished, voluntarily or involuntarily or involuntarily relinquished, limited suspended, revoked, not reviewed, subject to investigative hearings or are any such actions pending?</inlineHelpText>
        <label>DEA/CSR/CDS/DPS Actions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Received_Release_and_Immunity__c</fullName>
        <label>Date Received Release and Immunity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ED_Experience__c</fullName>
        <inlineHelpText>Description of ED experience(acuity, volume, types of patients (geriatric, pediatrics, etc.) - please address these ares either on your CV or via this application.</inlineHelpText>
        <label>ED Experience</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EMTALA_COBRA_Actions__c</fullName>
        <inlineHelpText>Have you been the subject of or involved in any EMTALA (COBRA) violations or investigations?</inlineHelpText>
        <label>EMTALA/COBRA Actions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Education_Completed__c</fullName>
        <inlineHelpText>Did you complete all educational programs for which you enlisted, including: Medical School, Internship, Residency and/or Fellowships?</inlineHelpText>
        <label>Education Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engaged_in_Illegal_Drug_Use__c</fullName>
        <label>Engaged in Illegal Drug Use</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_Name_from_Source__c</fullName>
        <description>import the full name as it appears on the lead source list.  List is key to removing duplicates if this lead source is imported again.  i.e. annual state based license lists for example or show lists with same name format each time.</description>
        <label>Full Name from Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCC_Administrative_and_Legal_01__c</fullName>
        <inlineHelpText>Familiar with the requirements of COBRA/EMTALA</inlineHelpText>
        <label>HCC Administrative and Legal 01</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Administrative_and_Legal_02__c</fullName>
        <inlineHelpText>Familiar with guidelines regarding transfer of patients</inlineHelpText>
        <label>HCC Administrative and Legal 02</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Administrative_and_Legal_03__c</fullName>
        <inlineHelpText>Familiar with/willingness to participate in functional hospital committees</inlineHelpText>
        <label>HCC Administrative and Legal 03</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Airway_01__c</fullName>
        <inlineHelpText>Endotracheal intubation (adult and child)</inlineHelpText>
        <label>HCC Airway 01</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Airway_02__c</fullName>
        <inlineHelpText>Ventilator management (short term)</inlineHelpText>
        <label>HCC Airway 02</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Airway_03__c</fullName>
        <inlineHelpText>Ventilator management (long term)</inlineHelpText>
        <label>HCC Airway 03</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Anesthesia_01__c</fullName>
        <inlineHelpText>Conscious Sedation</inlineHelpText>
        <label>HCC Anesthesia 01</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Anesthesia_02__c</fullName>
        <inlineHelpText>Local Anethesia</inlineHelpText>
        <label>HCC Anesthesia 02</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Anesthesia_03__c</fullName>
        <inlineHelpText>Rapid sequence intubation</inlineHelpText>
        <label>HCC Anesthesia 03</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Cardiac_01__c</fullName>
        <inlineHelpText>Cardiopulmonary resuscitation</inlineHelpText>
        <label>HCC Cardiac 01</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Cardiac_02__c</fullName>
        <inlineHelpText>Electrocardiogram (interpretation of 12 leads)</inlineHelpText>
        <label>HCC Cardiac 02</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Cardiac_03__c</fullName>
        <inlineHelpText>Transcutaneous cardiac pacing</inlineHelpText>
        <label>HCC Cardiac 03</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Diagnostic_Therapeutic_Procedures_01__c</fullName>
        <inlineHelpText>Arterial blood gases</inlineHelpText>
        <label>HCC Diagnostic/Therapeutic Procedures 01</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Diagnostic_Therapeutic_Procedures_02__c</fullName>
        <inlineHelpText>Bladder catherization</inlineHelpText>
        <label>HCC Diagnostic/Therapeutic Procedures 02</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Diagnostic_Therapeutic_Procedures_03__c</fullName>
        <inlineHelpText>Gastric lavage</inlineHelpText>
        <label>HCC Diagnostic/Therapeutic Procedures 03</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Head_Neck_01__c</fullName>
        <inlineHelpText>Management of Acute Head Injuries</inlineHelpText>
        <label>HCC Head.Neck 01</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Head_Neck_02__c</fullName>
        <inlineHelpText>Use of consults as appropriate - ENT, plastics and biofacial maxilla</inlineHelpText>
        <label>HCC Head.Neck 02</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Hemodynamic_Techniques_01__c</fullName>
        <inlineHelpText>Peripheral and central venous access</inlineHelpText>
        <label>HCC Hemodynamic Techniques 01</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Hemodynamic_Techniques_02__c</fullName>
        <inlineHelpText>Management and care of central venous linces (cups, swanganz)</inlineHelpText>
        <label>HCC Hemodynamic Techniques 02</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Miscellaneous_01__c</fullName>
        <inlineHelpText>Acute psychiatric illness</inlineHelpText>
        <label>HCC Miscellaneous 01</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Miscellaneous_02__c</fullName>
        <inlineHelpText>Alcohol overdose and withdrawal symptoms</inlineHelpText>
        <label>HCC Miscellaneous 02</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Miscellaneous_03__c</fullName>
        <inlineHelpText>Management of Poisioning</inlineHelpText>
        <label>HCC Miscellaneous 03</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Orthopedics_01__c</fullName>
        <inlineHelpText>Management and support to specialists pre and post surgical patients</inlineHelpText>
        <label>HCC Orthopedics 01</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Orthopedics_02__c</fullName>
        <inlineHelpText>Appropriate consult and referral post operatively</inlineHelpText>
        <label>HCC Orthopedics 02</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Wound_Management_01__c</fullName>
        <inlineHelpText>Foreign body removal from superficial site or readily accessible body cavities</inlineHelpText>
        <label>HCC Wound Management 01</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Wound_Management_02__c</fullName>
        <inlineHelpText>Management of burn victims</inlineHelpText>
        <label>HCC Wound Management 02</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCC_Wound_Management_03__c</fullName>
        <inlineHelpText>Simple wound debridement</inlineHelpText>
        <label>HCC Wound Management 03</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hospitalist_Experience__c</fullName>
        <inlineHelpText>Please provide an explanation for how you positively contributed to any of the following at current or past positions: LOS reduction, cost per cost reduction, patient satisfaction, referring physician satisfaction, host hospital satisfaction, etc</inlineHelpText>
        <label>Hospitalist Experience</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Yes_Name_of_Board_Admissible__c</fullName>
        <label>If Yes, Name of Board Admissible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impairment_Issues__c</fullName>
        <inlineHelpText>Are you now or have you ever been an impaired provider or have you been or are you currently enrolled in any impaired physician/provider programs?</inlineHelpText>
        <label>Impairment Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Policy_Cancelled__c</fullName>
        <label>Insurance Policy Cancelled</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Applicant_Portals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCC_01__c</fullName>
        <inlineHelpText>Local anesthesia</inlineHelpText>
        <label>MCC 01</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCC_02__c</fullName>
        <inlineHelpText>Accute cardiac emergencies including cardiac failure, myocardial infarction, cardiac dysrhythmias</inlineHelpText>
        <label>MCC 02</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCC_03__c</fullName>
        <inlineHelpText>Cardiopulmonary resuscitation</inlineHelpText>
        <label>MCC 03</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Malpractice_Claims_Info__c</fullName>
        <inlineHelpText>Have any incident reports, professional liability claims or lawsuits been filed against you or any entity as a result of allegations involving professional services you have rendered or are any such actions pending?</inlineHelpText>
        <label>Malpractice Claims Info</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Malpractice_Coverage_Issues__c</fullName>
        <inlineHelpText>Has any application for professional liability insurance converage ever been denied or limitations placed on the scope of your coverage, or has your professional liability insurance policy ever been canceled or renewal refused?</inlineHelpText>
        <label>Malpractice Coverage Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_License_Actions__c</fullName>
        <inlineHelpText>Has as license to practice medicine in any jurisdiction ever been denied, diminished, voluntarily or involuntarily relinquished, limited suspended, revoked, not renewed, subject to investigative hearings or any any such actions pending?</inlineHelpText>
        <label>Medical License Actions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Record_Documentation__c</fullName>
        <inlineHelpText>Your Experience in Medical Record Documentation includes the use of which systems:</inlineHelpText>
        <label>Medical Record Documentation</label>
        <picklist>
            <picklistValues>
                <fullName>T-System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dictation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice Recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Military__c</fullName>
        <label>Military</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month_Year_of_Attempt__c</fullName>
        <label>Month/Year of Attempt</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Year_of_Exam__c</fullName>
        <label>Month/Year of Exam</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPDB_action__c</fullName>
        <inlineHelpText>Are you aware of any adverse action report regarding your professional activities that have been filed or are being filed with the National Practitioner Data Banks</inlineHelpText>
        <label>NPDB action</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_Change__c</fullName>
        <inlineHelpText>Do you anticipate a name change within the next three to six months? (ex. Change in Marital Status)</inlineHelpText>
        <label>Name Change</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PIP_Risk_Mgt_Activities__c</fullName>
        <inlineHelpText>Are you familiar with, and supportive of, Performance Improvement and Risk Management Activities and processes?</inlineHelpText>
        <label>PIP/Risk Mgt Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Administrative_and_Legal_61__c</fullName>
        <inlineHelpText>Familiary with the requirements of COBRA/EMATALA</inlineHelpText>
        <label>PPC Administrative and Legal 61</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Administrative_and_Legal_62__c</fullName>
        <inlineHelpText>familiar with guidelines regarding transfer of patietns</inlineHelpText>
        <label>PPC Administrative and Legal 62</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Administrative_and_Legal_63__c</fullName>
        <inlineHelpText>familiar with the requirements for medical screening and examination for patients presenting to the ED, and my obligation to see all patients</inlineHelpText>
        <label>PPC Administrative and Legal 63</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Airway_01__c</fullName>
        <inlineHelpText>Cricothyrotomy</inlineHelpText>
        <label>PPC Airway - 01</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Airway_02__c</fullName>
        <inlineHelpText>Endotracheal intubation (adult and child)</inlineHelpText>
        <label>PPC Airway - 02</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Airway_03__c</fullName>
        <inlineHelpText>Percutaneous transtracheal ventilation</inlineHelpText>
        <label>PPC Airway - 03</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Anesthesia_05__c</fullName>
        <inlineHelpText>Conscious sedation</inlineHelpText>
        <label>PPC Anesthesia - 05</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Anesthesia_06__c</fullName>
        <inlineHelpText>Local anesthesia</inlineHelpText>
        <label>PPC Anesthesia - 06</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Anesthesia_07__c</fullName>
        <inlineHelpText>Rapid sequence intubation</inlineHelpText>
        <label>PPC Anesthesia - 07</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Cardiac_09__c</fullName>
        <inlineHelpText>Cardiopulmonary resuscitation</inlineHelpText>
        <label>PPC Cardiac - 09</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Cardiac_10__c</fullName>
        <inlineHelpText>Electrocardiogram (interpretation of 12 leads)</inlineHelpText>
        <label>PPC Cardiac - 10</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Cardiac_11__c</fullName>
        <inlineHelpText>Transcutaneous or transvenous cardiac pacing</inlineHelpText>
        <label>PPC Cardiac - 11</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Diagnostic_Therapeutic_Procedures_14__c</fullName>
        <inlineHelpText>Anoscopy</inlineHelpText>
        <label>PPC Diagnostic/Therapeutic Procedures 14</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Diagnostic_Therapeutic_Procedures_15__c</fullName>
        <inlineHelpText>Arterial blood gases</inlineHelpText>
        <label>PPC Diagnostic/Therapeutic Procedures 15</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>